<resources>
    <string name="app_name">TravelAssistant</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keep_signed_in">Keep me signed in</string>
    <string name="login">Login</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="my_profile">My Profile</string>
    <string name="rent_a_car">Rent a car</string>
    <string name="news">News</string>
    <string name="planned_trips">Plan Trips</string>
    <string name="wallet">Wallet</string>
    <string name="transactions">Transactions</string>
    <string name="chat">Forum</string>
    <string name="rank">Rank</string>
    <string name="logout">Logout</string>
    <string name="level">Level</string>
    <string name="hello">Hello !</string>
    <string name="see_my_profile">See My Profile</string>
    <string name="add_new_travel">Add A New Travel</string>
    <string name="future_travel">See My Future Travel</string>
</resources>
