<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryLightColor"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/level"
        app:layout_constraintEnd_toStartOf="@+id/progressBar3"
        app:layout_constraintTop_toTopOf="@+id/progressBar3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:text="32/100"
        app:layout_constraintStart_toEndOf="@+id/progressBar3"
        app:layout_constraintTop_toTopOf="@+id/progressBar3" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="@style/ProgressBarHorizontal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:scaleY="2"
        android:theme="@style/ProgressBarHorizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:background="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_between_buttons"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="75dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        app:srcCompat="@drawable/user_2" />

                    <Button
                        tools:ignore="OnClick"
                        android:id="@+id/button10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="75dp"
                        android:onClick="profileMenu"
                        android:text="@string/my_profile"
                        android:textAllCaps="false" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_between_buttons"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="75dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        app:srcCompat="@drawable/car" />

                    <Button
                        android:id="@+id/button11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="75dp"
                        android:onClick="goRentCarActivity"
                        android:text="@string/rent_a_car"
                        android:textAllCaps="false" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_between_buttons"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="75dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        app:srcCompat="@drawable/news_1" />

                    <Button
                        android:id="@+id/button12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="75dp"
                        android:onClick = "news"
                        android:text="@string/news"
                        android:textAllCaps="false" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_between_buttons"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="75dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        app:srcCompat="@drawable/map_1" />

                    <Button
                        android:id="@+id/button14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="75dp"
                        android:text="@string/planned_trips"
                        android:textAllCaps="false" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_between_buttons"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="75dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        app:srcCompat="@drawable/wallet" />

                    <Button
                        android:id="@+id/button15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="75dp"
                        android:onClick="goWalletActivity"
                        android:text="@string/wallet"
                        android:textAllCaps="false" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_between_buttons"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="75dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        app:srcCompat="@drawable/transaction" />

                    <Button
                        android:id="@+id/button16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="75dp"
                        android:onClick="goTransactionsActivity"
                        android:text="@string/transactions"
                        android:textAllCaps="false" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_between_buttons"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="75dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        app:srcCompat="@drawable/chat" />

                    <Button
                        android:id="@+id/button17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="75dp"
                        android:text="@string/chat"
                        android:onClick="goForumActivity"
                        android:textAllCaps="false" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_between_buttons"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="75dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        app:srcCompat="@drawable/podium" />

                    <Button
                        android:id="@+id/button18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="75dp"
                        android:text="@string/rank"
                        android:onClick="goRankActivity"
                        android:textAllCaps="false" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_between_buttons"
                android:layout_marginBottom="@dimen/space_between_buttons"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="75dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        app:srcCompat="@drawable/logout_2" />

                    <Button
                        android:id="@+id/button19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="75dp"
                        android:text="@string/logout"
                        android:textAllCaps="false" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>